--- a/MasterPage.master
+++ b/MasterPage.master
@@ -15,6 +15,10 @@
 <script src="JavaScript/jquery/jquery.min.js"></script>
 <!-- bxSlider Javascript file -->
 <script src="JavaScript/jquery.bxslider/jquery.bxslider.min.js"></script>
+   
+     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCK66JynRJPBbBgpSbwfgWc93eM54b1lzI"></script>
+   <script src="JavaScript/map.js"></script>
+    
 <!-- bxSlider CSS file -->
 <link href="JavaScript/jquery.bxslider/jquery.bxslider.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -36,7 +40,8 @@
 
             $("#viewmap").click(function () {
                 $("#ouraddress").slideDown();
-
+                window.dispatchEvent(new Event('resize'));
+         
 
             });
 
@@ -76,7 +81,24 @@
             </div>
         
             <div class="footer">
-                <h2>edwin.com</h2>
+               
+            <table >
+                <tr>
+                    <td><a href="http://validator.w3.org/check?uri=referer">Validate HTML</a> 
+</td>
+                    <td><a href="http://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a> </td>
+                    
+                </tr>
+                </table>
+
+                 <p>Copyright @ </p>
+            <p>Site designed by:</p>
+            <p align="center"><strong><u>Follow us at</u></strong></p>
+            <p>
+      <img src="images/facebook.png" />
+      <img src="images/instagram.ico" />
+      <img src="images/twitter.png" />
+  </p>
             </div>
         </div>
     </form>
